--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+
+  @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;500&display=swap');
+
+  * {
+    box-sizing: 0;
+    font-family: 'Signika Negative', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Manage{
+    font-weight: 500;
+    font-size: 70px;
+}
+.paragraph{
+    font-size: 30px;
+}
+.firstbutton{
+    width:200px;
+    height:50px;
+}
+.para{
+    border:1px solid black;
+    border-radius: 5px;
+    
+}
+.text{
+font-family: 'Signika Negative';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 30px;
+color: #737171;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+legend{
+    border:1px solid black;
+    border-radius: 5px;
+}
+.boxa{
+    width: 100%;
+    height: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.boxb{
+    width: 100%;
+    height: 200px;
 }
-
-.App-link {
-  color: #61dafb;
+.boxc{
+    width: 100%;
+    height: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttona{
+    width: 100%;
+    height: 50px;
+    background-color: #974FD0;
+    border-radius: 8px;
+}
+.red{
+    color: red;
+}
+.green{
+    color: green
 }
